# serializer version: 1
# name: test_device_tracker_empty[zoe_50][device_tracker.reg_zoe_50_location-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <DeviceTrackerEntityCapabilityAttribute.TRACKING_TYPE: 'tracking_type'>: <TrackingType.POSITION: 'position'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'device_tracker',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'device_tracker.reg_zoe_50_location',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Location',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Location',
    'platform': 'renault',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'location',
    'unique_id': 'vf1zoe50vin_location',
    'unit_of_measurement': None,
  })
# ---
# name: test_device_tracker_empty[zoe_50][device_tracker.reg_zoe_50_location-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'REG-ZOE-50 Location',
      <DeviceTrackerEntityStateAttribute.IN_ZONES: 'in_zones'>: list([
      ]),
      <DeviceTrackerEntityStateAttribute.SOURCE_TYPE: 'source_type'>: <SourceType.GPS: 'gps'>,
      <DeviceTrackerEntityCapabilityAttribute.TRACKING_TYPE: 'tracking_type'>: <TrackingType.POSITION: 'position'>,
    }),
    'context': <ANY>,
    'entity_id': 'device_tracker.reg_zoe_50_location',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_device_tracker_errors[zoe_50][device_tracker.reg_zoe_50_location-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <DeviceTrackerEntityCapabilityAttribute.TRACKING_TYPE: 'tracking_type'>: <TrackingType.POSITION: 'position'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'device_tracker',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'device_tracker.reg_zoe_50_location',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Location',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Location',
    'platform': 'renault',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'location',
    'unique_id': 'vf1zoe50vin_location',
    'unit_of_measurement': None,
  })
# ---
# name: test_device_tracker_errors[zoe_50][device_tracker.reg_zoe_50_location-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'REG-ZOE-50 Location',
      <DeviceTrackerEntityCapabilityAttribute.TRACKING_TYPE: 'tracking_type'>: <TrackingType.POSITION: 'position'>,
    }),
    'context': <ANY>,
    'entity_id': 'device_tracker.reg_zoe_50_location',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unavailable',
  })
# ---
# name: test_device_trackers[captur_fuel][device_tracker.reg_captur_fuel_location-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <DeviceTrackerEntityCapabilityAttribute.TRACKING_TYPE: 'tracking_type'>: <TrackingType.POSITION: 'position'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'device_tracker',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'device_tracker.reg_captur_fuel_location',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Location',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Location',
    'platform': 'renault',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'location',
    'unique_id': 'vf1capturfuelvin_location',
    'unit_of_measurement': None,
  })
# ---
# name: test_device_trackers[captur_fuel][device_tracker.reg_captur_fuel_location-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'REG-CAPTUR-FUEL Location',
      <TrackerEntityStateAttribute.GPS_ACCURACY: 'gps_accuracy'>: 0,
      <DeviceTrackerEntityStateAttribute.IN_ZONES: 'in_zones'>: list([
      ]),
      <EntityStateAttribute.LATITUDE: 'latitude'>: 48.1234567,
      <EntityStateAttribute.LONGITUDE: 'longitude'>: 11.1234567,
      <DeviceTrackerEntityStateAttribute.SOURCE_TYPE: 'source_type'>: <SourceType.GPS: 'gps'>,
      <DeviceTrackerEntityCapabilityAttribute.TRACKING_TYPE: 'tracking_type'>: <TrackingType.POSITION: 'position'>,
    }),
    'context': <ANY>,
    'entity_id': 'device_tracker.reg_captur_fuel_location',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'not_home',
  })
# ---
# name: test_device_trackers[captur_phev][device_tracker.reg_captur_phev_location-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <DeviceTrackerEntityCapabilityAttribute.TRACKING_TYPE: 'tracking_type'>: <TrackingType.POSITION: 'position'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'device_tracker',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'device_tracker.reg_captur_phev_location',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Location',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Location',
    'platform': 'renault',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'location',
    'unique_id': 'vf1capturphevvin_location',
    'unit_of_measurement': None,
  })
# ---
# name: test_device_trackers[captur_phev][device_tracker.reg_captur_phev_location-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'REG-CAPTUR_PHEV Location',
      <TrackerEntityStateAttribute.GPS_ACCURACY: 'gps_accuracy'>: 0,
      <DeviceTrackerEntityStateAttribute.IN_ZONES: 'in_zones'>: list([
      ]),
      <EntityStateAttribute.LATITUDE: 'latitude'>: 48.1234567,
      <EntityStateAttribute.LONGITUDE: 'longitude'>: 11.1234567,
      <DeviceTrackerEntityStateAttribute.SOURCE_TYPE: 'source_type'>: <SourceType.GPS: 'gps'>,
      <DeviceTrackerEntityCapabilityAttribute.TRACKING_TYPE: 'tracking_type'>: <TrackingType.POSITION: 'position'>,
    }),
    'context': <ANY>,
    'entity_id': 'device_tracker.reg_captur_phev_location',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'not_home',
  })
# ---
# name: test_device_trackers[megane_e_tech][device_tracker.reg_meg_0_location-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <DeviceTrackerEntityCapabilityAttribute.TRACKING_TYPE: 'tracking_type'>: <TrackingType.POSITION: 'position'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'device_tracker',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'device_tracker.reg_meg_0_location',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Location',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Location',
    'platform': 'renault',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'location',
    'unique_id': 'vf1meganeetechvin_location',
    'unit_of_measurement': None,
  })
# ---
# name: test_device_trackers[megane_e_tech][device_tracker.reg_meg_0_location-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'REG-MEG-0 Location',
      <TrackerEntityStateAttribute.GPS_ACCURACY: 'gps_accuracy'>: 0,
      <DeviceTrackerEntityStateAttribute.IN_ZONES: 'in_zones'>: list([
      ]),
      <EntityStateAttribute.LATITUDE: 'latitude'>: 48.1234567,
      <EntityStateAttribute.LONGITUDE: 'longitude'>: 11.1234567,
      <DeviceTrackerEntityStateAttribute.SOURCE_TYPE: 'source_type'>: <SourceType.GPS: 'gps'>,
      <DeviceTrackerEntityCapabilityAttribute.TRACKING_TYPE: 'tracking_type'>: <TrackingType.POSITION: 'position'>,
    }),
    'context': <ANY>,
    'entity_id': 'device_tracker.reg_meg_0_location',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'not_home',
  })
# ---
# name: test_device_trackers[twingo_3_electric][device_tracker.reg_twingo_iii_location-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <DeviceTrackerEntityCapabilityAttribute.TRACKING_TYPE: 'tracking_type'>: <TrackingType.POSITION: 'position'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'device_tracker',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'device_tracker.reg_twingo_iii_location',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Location',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Location',
    'platform': 'renault',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'location',
    'unique_id': 'vf1twingoiiivin_location',
    'unit_of_measurement': None,
  })
# ---
# name: test_device_trackers[twingo_3_electric][device_tracker.reg_twingo_iii_location-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'REG-TWINGO-III Location',
      <TrackerEntityStateAttribute.GPS_ACCURACY: 'gps_accuracy'>: 0,
      <DeviceTrackerEntityStateAttribute.IN_ZONES: 'in_zones'>: list([
      ]),
      <EntityStateAttribute.LATITUDE: 'latitude'>: 48.1234567,
      <EntityStateAttribute.LONGITUDE: 'longitude'>: 11.1234567,
      <DeviceTrackerEntityStateAttribute.SOURCE_TYPE: 'source_type'>: <SourceType.GPS: 'gps'>,
      <DeviceTrackerEntityCapabilityAttribute.TRACKING_TYPE: 'tracking_type'>: <TrackingType.POSITION: 'position'>,
    }),
    'context': <ANY>,
    'entity_id': 'device_tracker.reg_twingo_iii_location',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'not_home',
  })
# ---
# name: test_device_trackers[zoe_50][device_tracker.reg_zoe_50_location-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <DeviceTrackerEntityCapabilityAttribute.TRACKING_TYPE: 'tracking_type'>: <TrackingType.POSITION: 'position'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'device_tracker',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'device_tracker.reg_zoe_50_location',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Location',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Location',
    'platform': 'renault',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'location',
    'unique_id': 'vf1zoe50vin_location',
    'unit_of_measurement': None,
  })
# ---
# name: test_device_trackers[zoe_50][device_tracker.reg_zoe_50_location-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'REG-ZOE-50 Location',
      <TrackerEntityStateAttribute.GPS_ACCURACY: 'gps_accuracy'>: 0,
      <DeviceTrackerEntityStateAttribute.IN_ZONES: 'in_zones'>: list([
      ]),
      <EntityStateAttribute.LATITUDE: 'latitude'>: 48.1234567,
      <EntityStateAttribute.LONGITUDE: 'longitude'>: 11.1234567,
      <DeviceTrackerEntityStateAttribute.SOURCE_TYPE: 'source_type'>: <SourceType.GPS: 'gps'>,
      <DeviceTrackerEntityCapabilityAttribute.TRACKING_TYPE: 'tracking_type'>: <TrackingType.POSITION: 'position'>,
    }),
    'context': <ANY>,
    'entity_id': 'device_tracker.reg_zoe_50_location',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'not_home',
  })
# ---
